# rustedlogs

./: Cargo.toml  main
src/: awslogs.rs  main.rs
