[package]
name = "rustedlogs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
rusoto_core = "0.45.0"
rusoto_logs = "0.45.0"
tokio = { version = "0.2.0", features = ["full"] }


